--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^2.1.5",
     "knex": "^2.5.1",
+    "multer": "^1.4.5-lts.1",
     "sqlite3": "^5.1.6",
     "superagent": "^8.1.2"
   },
@@ -46,6 +47,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/superagent": "^8.1.1",
