--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^2.1.5",
     "knex": "^2.5.1",
+    "react-animated-heart": "^0.0.8",
     "sqlite3": "^5.1.6",
     "superagent": "^8.1.2"
   },
