--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^2.1.5",
     "knex": "^2.5.1",
-    "react-animated-heart": "^0.0.8",
     "multer": "^1.4.5-lts.1",
+    "react-animated-heart": "^0.0.8",
+    "react-datepicker": "^7.1.0",
     "sqlite3": "^5.1.6",
     "superagent": "^8.1.2"
   },
