--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     ]
   },
   "dependencies": {
+    "@types/jspdf": "^2.0.0",
     "express": "^4.17.2",
     "express-jwt": "^8.4.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "jwks-rsa": "^2.1.5",
     "knex": "^2.5.1",
     "multer": "^1.4.5-lts.1",
