--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^2.1.5",
     "knex": "^2.5.1",
-    "react-animated-heart": "^0.0.8",
     "multer": "^1.4.5-lts.1",
+    "react-animated-heart": "^0.0.8",
     "sqlite3": "^5.1.6",
     "superagent": "^8.1.2"
   },
@@ -55,6 +55,7 @@
     "@types/supertest": "^6.0.2",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.7",
     "esbuild": "^0.18.19",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.29.1",
