--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "multer": "^1.4.5-lts.1",
     "react-animated-heart": "^0.0.8",
     "react-datepicker": "^7.1.0",
+    "react-transition-group": "^4.4.5",
     "sqlite3": "^5.1.6",
     "superagent": "^8.1.2"
   },
@@ -54,6 +55,7 @@
     "@types/multer": "^1.4.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-transition-group": "^4.4.10",
     "@types/superagent": "^8.1.1",
     "@types/supertest": "^6.0.2",
     "@vitejs/plugin-react": "^4.2.1",
