--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "knex": "^2.5.1",
     "multer": "^1.4.5-lts.1",
     "react-animated-heart": "^0.0.8",
+    "react-colorful": "^5.6.1",
     "react-datepicker": "^7.1.0",
     "sqlite3": "^5.1.6",
     "superagent": "^8.1.2"
