--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     ]
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.5.0",
     "@types/jspdf": "^2.0.0",
     "express": "^4.17.2",
     "express-jwt": "^8.4.1",
@@ -39,6 +41,7 @@
     "react-animated-heart": "^0.0.8",
     "react-datepicker": "^7.1.0",
     "sqlite3": "^5.1.6",
+    "stripe": "^15.12.0",
     "superagent": "^8.1.2"
   },
   "devDependencies": {
