--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.5.0",
     "@types/jspdf": "^2.0.0",
+    "@types/stripe": "^8.0.417",
     "express": "^4.17.2",
     "express-jwt": "^8.4.1",
     "http-status-codes": "^2.3.0",
